<?xml version="1.0"?>
<package format="3">
  <name>tb3_slam_nav_pkg</name>
  <version>0.1.0</version>
  <description>TurtleBot3 ROS 2 package for SLAM mapping and Nav2 navigation in simulation or on a robot.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav2_simple_commander</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_map_server</depend>
  <depend>slam_toolbox</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_navigation2</depend>
  <depend>turtlebot3_cartographer</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
